# Backend/src/swagger.json
@@ -155,6 +155,9 @@
 			},
 			"HostLeaderboardItem": {
 				"properties": {
+					"meta": {
+						"type": "string"
+					},
 					"avatar": {
 						"type": "string"
 					},
@@ -623,6 +626,9 @@
 						"type": "number",
 						"format": "double"
 					},
+					"meta": {
+						"type": "string"
+					},
 					"socketId": {
 						"type": "string"
 					},
@@ -819,6 +825,9 @@
 						"type": "string"
 					},
 					"avatar": {
+						"type": "string"
+					},
+					"meta": {
 						"type": "string"
 					}
 				},
